force-app/main/default/objects/Opportunity/fields/Referral_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Referral_Identifier__c</fullName>
    <description>Unique identifier for this referral in Microsoft Partner Center. Once this record is created in Microsoft Partner Center this field will get populated.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier field for Microsoft Partner Center Referral</inlineHelpText>
    <label>Referral Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>