force-app/main/default/objects/Opportunity/fields/Referral_visible_to_Microsoft_sellers__c.field-meta.xml
<CustomField>
    <fullName>Referral_visible_to_Microsoft_sellers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select visibility for Microsoft Partner Center Referral. By checking it this referral will be visible to Microsoft sellers and it may get converted to co-sell referral. When Microsoft help is required, referral is visible to Microsoft sellers by default.</description>
    <inlineHelpText>Select visibility for Microsoft Partner Center Referral. By checking it this referral will be visible to Microsoft sellers and it may get converted to co-sell referral. When Microsoft help is required, referral is visible to Microsoft sellers by default.</inlineHelpText>
    <label>Referral visible to Microsoft sellers?</label>
    <type>Checkbox</type>
</CustomField>