force-app/main/default/objects/Opportunity/fields/Relative_Priority__c.field-meta.xml
<CustomField>
    <fullName>Relative_Priority__c</fullName>
    <label>Relative Priority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>