force-app/main/default/objects/Opportunity/fields/Renewal_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Invoice_Date__c</fullName>
    <label>Renewal Invoice Date</label>
    <type>Date</type>
</CustomField>