force-app/main/default/objects/Opportunity/fields/Renewal_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payment_Due__c</fullName>
    <formula>if(isblank(Renewal_Invoice_Date__c), NULL,
Renewal_Invoice_Date__c +  Renewal_Payment_Terms_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Payment Due</label>
    <type>Date</type>
</CustomField>