force-app/main/default/objects/Opportunity/fields/Renewal_Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payment_Terms_Days__c</fullName>
    <description>Days from Invoice until Renewal Payment is Due</description>
    <label>Renewal Payment Terms (Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>