force-app/main/default/objects/Opportunity/fields/Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_Date__c</fullName>
    <description>Date the renewal contract will begin from</description>
    <label>Renewal Start Date</label>
    <type>Date</type>
</CustomField>