force-app/main/default/objects/Opportunity/fields/Renewal_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Years__c</fullName>
    <description>How many years is the renewal</description>
    <label>Renewal Term (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>