force-app/main/default/objects/Opportunity/fields/Risk_Co_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Co_Factors__c</fullName>
    <formula>MIN(10,(Case(Probability,
0, 10,
0.05,9,
0.10, 8,
0.20, 7,
0.40,6,
0.50,5,
0.60,4,
0.70,3,
0.75,3,
0.80,2,
0.85,2,
0.90,1,
1,0,
10) *

if(ispickval(Type,&quot;Renewal&quot;),1,
if((Today() - DateValue(CreatedDate)) &gt; 365,10,
if((Today() - DateValue(CreatedDate)) &gt; 270,7,
if((Today() - DateValue(CreatedDate)) &gt; 180,5,
if((Today() - DateValue(CreatedDate)) &gt; 90,3,
1)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Co-Factors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>