force-app/main/default/objects/Opportunity/fields/SaaS_Product__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SaaS Product</label>
    <type>Checkbox</type>
</CustomField>