force-app/main/default/objects/Opportunity/fields/SAL__c.field-meta.xml
<CustomField>
    <fullName>SAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this opportunity converted to SAL or not.</description>
    <label>SAL</label>
    <type>Checkbox</type>
</CustomField>