force-app/main/default/objects/Opportunity/fields/Salesforce_AppExchange__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_AppExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce AppExchange</label>
    <type>Checkbox</type>
</CustomField>