force-app/main/default/objects/Opportunity/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect an SDR to an Opportunity</description>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Sourced</relationshipName>
    <type>Lookup</type>
</CustomField>