force-app/main/default/objects/Opportunity/fields/SE_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SE_on_Opportunity__c</fullName>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEs</valueSetName>
    </valueSet>
</CustomField>