force-app/main/default/objects/Opportunity/fields/Secondary_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Use_Case__c</fullName>
    <label>Secondary Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Macro_Use_Case__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>