force-app/main/default/objects/Opportunity/fields/Sequence_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Sequence_of_Events__c</fullName>
    <label>Sequence of Events</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>