force-app/main/default/objects/Opportunity/fields/Solution_Area__c.field-meta.xml
<CustomField>
    <fullName>Solution_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Solution Area for Microsoft Partner Center referral</description>
    <inlineHelpText>Solution Area for Microsoft Partner Center referral</inlineHelpText>
    <label>Solution Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Area__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Area__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Solution_Area_To_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>