force-app/main/default/objects/Opportunity/fields/Solution_Count__c.field-meta.xml
<CustomField>
    <fullName>Solution_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Solution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>