force-app/main/default/objects/Opportunity/fields/Solutions_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>