force-app/main/default/objects/Opportunity/fields/Stage_2_Letter_Code__c.field-meta.xml
<CustomField>
    <fullName>Stage_2_Letter_Code__c</fullName>
    <formula>LEFT(TEXT( StageName ) ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage 2 Letter Code</label>
    <type>Text</type>
</CustomField>