force-app/main/default/objects/Opportunity/fields/Stage_Change_From_To__c.field-meta.xml
<CustomField>
    <fullName>Stage_Change_From_To__c</fullName>
    <formula>&quot;From: &quot; + Prior_Stage__c + &quot; |To: &quot; + text(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Change From-To</label>
    <type>Text</type>
</CustomField>