force-app/main/default/objects/Opportunity/fields/Stage_Text__c.field-meta.xml
<CustomField>
    <fullName>Stage_Text__c</fullName>
    <formula>text( StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Text</label>
    <type>Text</type>
</CustomField>