force-app/main/default/objects/Opportunity/fields/Sync_With_Partner_Center__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Partner_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to sync this opportunity with Microsoft and create a referral</description>
    <inlineHelpText>Whether to sync this opportunity with Microsoft and create a referral. Cannot sync without solution for &apos;IP Co-sell&apos;.</inlineHelpText>
    <label>Sync With Partner Center</label>
    <type>Checkbox</type>
</CustomField>