force-app/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description>True total contract value as stated on the face of the signed contract.</description>
    <inlineHelpText>True total contract value as stated on the face of the signed contract.</inlineHelpText>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>