force-app/main/default/objects/Opportunity/fields/TCV_Ext__c.field-meta.xml
<CustomField>
    <fullName>TCV_Ext__c</fullName>
    <formula>if(Amount &gt; TCV__c,Amount,TCV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV - Ext</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>