force-app/main/default/objects/Opportunity/fields/Teaming_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Teaming_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teaming Agreement</label>
    <type>Checkbox</type>
</CustomField>