force-app/main/default/objects/Opportunity/fields/Teaming_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Teaming_Agreement_Date__c</fullName>
    <label>Teaming Agreement Date</label>
    <type>Date</type>
</CustomField>