force-app/main/default/objects/Opportunity/fields/Technology_Stack__c.field-meta.xml
<CustomField>
    <fullName>Technology_Stack__c</fullName>
    <label>Technology Stack</label>
    <type>TextArea</type>
</CustomField>