force-app/main/default/objects/Opportunity/fields/This_Stage__c.field-meta.xml
<CustomField>
    <fullName>This_Stage__c</fullName>
    <label>This Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>