force-app/main/default/objects/Opportunity/fields/Use_Case_s__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_s__c</fullName>
    <label>Use Case(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sdlc</fullName>
                <label>SDLC</label>
            </value>
            <value>
                <fullName>salesforce</fullName>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>insights</fullName>
            </value>
            <value>
                <fullName>git custodian</fullName>
                <label>Git Custodian</label>
            </value>
            <value>
                <fullName>IaC</fullName>
            </value>
            <value>
                <fullName>SaaS (non-salesforce)</fullName>
            </value>
            <value>
                <fullName>gh copilot</fullName>
                <label>GH Copilot</label>
            </value>
            <value>
                <fullName>scm migration</fullName>
                <label>SCM Migration</label>
            </value>
            <value>
                <fullName>Databricks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>