force-app/main/default/objects/Opportunity/fields/walnut__Date_Last_Demo_Played__c.field-meta.xml
<CustomField>
    <fullName>walnut__Date_Last_Demo_Played__c</fullName>
    <label>Date_Last_Demo_Played</label>
    <type>Date</type>
</CustomField>