force-app/main/default/objects/Opportunity/fields/walnut__Days_Since_Last_Demo_Play__c.field-meta.xml
<CustomField>
    <fullName>walnut__Days_Since_Last_Demo_Play__c</fullName>
    <formula>IF(ISNULL(walnut__Date_Last_Demo_Played__c), NULL,  TODAY() - walnut__Date_Last_Demo_Played__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Demo Play</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>