force-app/main/default/objects/Opportunity/fields/walnut__Demo_Data_Count__c.field-meta.xml
<CustomField>
    <fullName>walnut__Demo_Data_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demo Data Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>