force-app/main/default/objects/Opportunity/fields/walnut__Sales_Cycle_Length__c.field-meta.xml
<CustomField>
    <fullName>walnut__Sales_Cycle_Length__c</fullName>
    <formula>IF( AND(IsClosed, CloseDate - DATEVALUE( CreatedDate ) &gt; 0) , CloseDate - DATEVALUE( CreatedDate ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Cycle Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>