force-app/main/default/objects/Opportunity/fields/warmlycreatedaccount__c.field-meta.xml
<CustomField>
    <fullName>warmlycreatedaccount__c</fullName>
    <description>Tracks which deals came from a Warmly created account</description>
    <label>Warmly: Created Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>