force-app/main/default/objects/Opportunity/fields/Year1_Percentage_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Year1_Percentage_Net_Revenue__c</fullName>
    <label>Year1 Percentage Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>