force-app/main/default/objects/Opportunity/validationRules/Cannot_sync_without_solution.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_sync_without_solution</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Co_sell_Type__c , &apos;IP Co-sell&apos;),
  (Solution_Count__c ==0 || 
   ISBLANK(  Solution_Count__c )
   ),
 Sync_With_Partner_Center__c 
)</errorConditionFormula>
    <errorDisplayField>Sync_With_Partner_Center__c</errorDisplayField>
    <errorMessage>Please add at least one Solution/Product (1P/3P/Your own company product) before syncing.</errorMessage>
</ValidationRule>