force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Notes_Required</fullName>
    <active>false</active>
    <description>When an Opportunity is Closed Lost, both a Lost Reason and Closed Lost Notes are required (at least a sentence in length)</description>
    <errorConditionFormula>AND(
  IsClosed,
  NOT(IsWon),
  ISBLANK(Loss_Notes__c),
  CloseDate &gt;= DATE(2025,8,1)
)</errorConditionFormula>
    <errorDisplayField>Loss_Notes__c</errorDisplayField>
    <errorMessage>When an Opportunity is Closed Lost, both a Lost Reason and Closed Lost Notes are required (at least a sentence in length)</errorMessage>
</ValidationRule>