force-app/main/default/objects/Opportunity/validationRules/competitor_required.validationRule-meta.xml
<ValidationRule>
    <fullName>competitor_required</fullName>
    <active>true</active>
    <description>When loss reason is competition, please include the competitor</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Closed_Lost_Reason__c , &apos;Competition&apos;),
  TEXT (  Competitor__c ) = &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Please indicate which the competitor for this opportunity.</errorMessage>
</ValidationRule>