force-app/main/default/objects/Opportunity/validationRules/link_to_proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>link_to_proposal</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( TEXT(StageName) = &quot;Proposal&quot;, ISBLANK( Link_to_Proposal__c ))</errorConditionFormula>
    <errorDisplayField>Link_to_Proposal__c</errorDisplayField>
    <errorMessage>Please add a link to proposal</errorMessage>
</ValidationRule>