force-app/main/default/objects/Opportunity/validationRules/loss_reason_compulsory.validationRule-meta.xml
<ValidationRule>
    <fullName>loss_reason_compulsory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  IsClosed,
  NOT(IsWon),
  ISBLANK(TEXT(Closed_Lost_Reason__c)),
  CloseDate &gt;= DATE(2025,8,1)
)</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Loss reason is mandatory when opportunity is &apos;Closed Lost&apos;</errorMessage>
</ValidationRule>