force-app/main/default/objects/Opportunity/validationRules/other_competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>other_competitor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL ( StageName , &quot;Closed Lost&quot;),
 TEXT( Competitor__c ) = &quot;Other&quot;,  
 ISBLANK(Competitor_others__c))</errorConditionFormula>
    <errorDisplayField>Competitor_others__c</errorDisplayField>
    <errorMessage>Please fill in a value for Other Competitor</errorMessage>
</ValidationRule>