force-app/main/default/objects/Opportunity/validationRules/PO_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Required</fullName>
    <active>true</active>
    <description>If PO Needed is marked, a PO Number must be filled in</description>
    <errorConditionFormula>AND(
  PO_Needed__c = TRUE,
 ISBLANK( PO_Number__c ))</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>If a PO is needed, please provide a PO Number.</errorMessage>
</ValidationRule>