force-app/main/default/objects/Opportunity/validationRules/Required_Co_Sell_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Co_Sell_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT(Co_sell_Type__c ))</errorConditionFormula>
    <errorDisplayField>Co_sell_Type__c</errorDisplayField>
    <errorMessage>Co-sell Type is Required.</errorMessage>
</ValidationRule>