force-app/main/default/objects/Opportunity/validationRules/Required_Customer_Purchase_Intent.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Customer_Purchase_Intent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
      ISPICKVAL( Co_sell_Type__c , &apos;IP Co-sell&apos;)
    ),
    ISBLANK(TEXT(Customer_purchase_intent__c ))
)</errorConditionFormula>
    <errorDisplayField>Customer_purchase_intent__c</errorDisplayField>
    <errorMessage>Customer purchase intent is Required.</errorMessage>
</ValidationRule>