force-app/main/default/objects/Opportunity/validationRules/Required_Partner_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Partner_Role</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Co_sell_Type__c , &apos;Services Co-sell&apos;),
    ISBLANK(   Partner_Role__c )
)</errorConditionFormula>
    <errorDisplayField>Partner_Role__c</errorDisplayField>
    <errorMessage>Partner Role is Required.</errorMessage>
</ValidationRule>