force-app/main/default/objects/Opportunity/validationRules/Required_Solution_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Solution_Area</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
      ISPICKVAL( Co_sell_Type__c , &apos;IP Co-sell&apos;),
      ISPICKVAL( Co_sell_Type__c , &apos;Services Co-sell&apos;)
    ),
    ISBLANK( Solution_Area__c )
)</errorConditionFormula>
    <errorDisplayField>Solution_Area__c</errorDisplayField>
    <errorMessage>Solution Area is Required.</errorMessage>
</ValidationRule>