force-app/main/default/objects/Opportunity/validationRules/Required_Solution_Play.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Solution_Play</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
      ISPICKVAL( Co_sell_Type__c , &apos;IP Co-sell&apos;),
      ISPICKVAL( Co_sell_Type__c , &apos;Services Co-sell&apos;)
    ),
    ISBLANK(  Solution_Play__c )
)</errorConditionFormula>
    <errorDisplayField>Solution_Play__c</errorDisplayField>
    <errorMessage>Solution Play is Required.</errorMessage>
</ValidationRule>