force-app/main/default/objects/Opportunity/validationRules/Won_Opp_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Won_Opp_Required_Fields</fullName>
    <active>true</active>
    <description>When opportunities are marked Closed Won, the following fields are required:
Contract Start Date
Contract End Date
PO Number (if PO Needed)</description>
    <errorConditionFormula>AND(
 ISPICKVAL( StageName , &quot;Closed Won&quot;),
 RecordType.Name = &quot;Sales&quot; ,
 OR( 
   Contract_Attached__c = FALSE,
   ISBLANK( Contract_Start_Date__c ),
   ISBLANK( Contract_End_Date__c )))</errorConditionFormula>
    <errorMessage>The following fields are required to mark this won:
Contract Start Date
Contract End Date
Also, a Contract must be attached to the opportunity.</errorMessage>
</ValidationRule>