force-app/main/default/objects/Opportunity/listViews/Commit_Opps.listView-meta.xml
<ListView>
    <fullName>Commit_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.FORECAST_CATEGORY</field>
        <operation>equals</operation>
        <value>Most Likely,Commit</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Sales</value>
    </filters>
    <label>Commit/Most Likely Opps</label>
</ListView>