force-app/main/default/objects/Opportunity/listViews/Open_Renewals.listView-meta.xml
<ListView>
    <fullName>Open_Renewals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>03 Renewal Evaluation,04 Proposal,05 Negotiation,06 Signed Contract Received</value>
    </filters>
    <label>Open Renewals</label>
</ListView>